force-app/main/messaging/objects/Dialing_Country_Code__mdt/Dialing_Country_Code__mdt.object-meta.xml
<CustomObject>
    <label>Dialing Country Code</label>
    <pluralLabel>Dialing Country Codes</pluralLabel>
</CustomObject>