force-app/main/messaging/objects/Dialing_Country_Code__mdt/fields/Character_Limit__c.field-meta.xml
<CustomField>
    <fullName>Character_Limit__c</fullName>
    <label>Character Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>