force-app/main/messaging/objects/Dialing_Country_Code__mdt/fields/Dialing_Code__c.field-meta.xml
<CustomField>
    <fullName>Dialing_Code__c</fullName>
    <description>Dialing Code for a country. For multiple values, please have them comma (,) separated.</description>
    <inlineHelpText>Dialing Code for a country. For multiple values, please have them comma (,) separated.</inlineHelpText>
    <label>Dialing Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>