force-app/main/messaging/objects/Dialing_Country_Code__mdt/fields/Enabled_for_SMS__c.field-meta.xml
<CustomField>
    <fullName>Enabled_for_SMS__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check if the country is enabled for SMS</description>
    <inlineHelpText>Check if the country is enabled for SMS</inlineHelpText>
    <label>Enabled for SMS</label>
    <type>Checkbox</type>
</CustomField>